# PokerEval

./: build.sh
src/: CMakeLists.txt  main.cpp  main.t.cpp
src/eval/: CMakeLists.txt  hand.cpp  hand.h  monte.cpp  monte.h
src/game/: CMakeLists.txt  card.cpp  card.h  deck.cpp  deck.h
